# aula19_bootcamp_python

./: models.py  pyproject.toml  schema.py  test.db
