[tool.poetry]
name = "aula19-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Nathan Xavier <nathannery84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
